Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9430

logic errors in lgss_sk code

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.10.0
    • Lustre 2.9.0
    • None
    • 4
    • 9223372036854775807

      Aside from the encryption protocol problems affecting the shared key feature in LU-9073, there are a couple trivial bugs in sk_name2hmac(). These affect logic for setting the hash type when creating a shared key. For example, the encryption type is echoed to stdout rather than being properly assigned. I will submit a patch to fix this.

      Example:
      $ ./lgss_sk -w testlu.key -f lustretest -d /dev/urandom -i SHA512 -t server
      sha512Reading random data for shared key from '/dev/urandom'
      $ ./lgss_sk -r testlu.key
      Version: 1
      Type: server
      HMAC alg: crypt
      Crypto alg: sha256
      Ctx Expiration: 604800 seconds
      Shared keylen: 256 bits
      Prime length: 2048 bits
      File system: lustretest
      MGS NIDs:
      Nodemap name: default
      Shared key:
      0000: a685 0f19 c96a 625e 9cd7 d800 26f2 228b .....jb^....&.".
      0010: 86b8 a0e0 34a4 2fae 0b45 5d46 450a 5285 ....4./..E]FE.R.

            hannac Chris Hanna (Inactive)
            hannac Chris Hanna (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: